fixed controls button on mobile to overlap the overlay in the header

--- a/css/style.css
+++ b/css/style.css
@@ -168,13 +168,14 @@ a {
 .header__controls {
   background-color: var(--black);
   position: absolute;
+  z-index: 2;
   right: 0;
   top: -3.5rem;
   height: 3.5rem;
   width: 26.6666666667%;
   display: flex;
 }
-@media (min-width: 48em) {
+@media (min-width: 64em) {
   .header__controls {
     right: unset;
     top: unset;
@@ -182,7 +183,7 @@ a {
     left: 0;
   }
 }
-@media (min-width: 48em) {
+@media (min-width: 64em) {
   .header {
     display: grid;
     grid-template-columns: repeat(72, 1fr);
@@ -219,7 +220,7 @@ a {
   text-transform: uppercase;
   margin-block-end: 1rem;
 }
-@media (min-width: 48em) {
+@media (min-width: 64em) {
   .main {
     display: grid;
     grid-template-columns: repeat(72, 1fr);
